# project_one_code

./: .cproject  .gitignore  .project
opencv/files/final_targets_OpenCV/: cylinder_560mm_with_LED.pgm
opencv/src/calibration/: CMakeLists.txt  calibration.cpp
opencv/src/canny_edge/: CMakeLists.txt  canny_edge.cpp
opencv/src/circle_detection/: CMakeLists.txt  circle_detection.cpp
opencv/src/ellipse/: CMakeLists.txt  ellipse.cpp
opencv/src/ellipse_detector/: CMakeLists.txt  EllipseDetectorYaed.cpp  EllipseDetectorYaed.h  Main.cpp  common.h
opencv/src/ero_dila/: CMakeLists.txt  ero.cpp
opencv/src/harris_corner/: CMakeLists.txt  harris.cpp
opencv/src/histogram/: CMakeLists.txt
opencv/src/hsv_white/: CMakeLists.txt  hsv_white.cpp  ost.yaml  ros_calib_ps_eye.yaml
opencv/src/octagon/: CMakeLists.txt  octagon.cpp
opencv/src/video/: CMakeLists.txt  video.cpp
opencv/src/xtion/: CMakeLists.txt  xtion.cpp
pcl/: .cproject  .project
pcl/src/averageCloud/: CMakeLists.txt  average_cloud.cpp  ohmpointcloudaverage.cpp  ohmpointcloudaverage.h
pcl/src/cylinder_segmentation/: .cproject  .project  cylinder_segmentation.cpp
pcl/src/grabber/: openni_grabber.cpp
pcl/src/hsv_seg/: CMakeLists.txt  hsv_seg.cpp
pcl/src/hsv_seg2/: CMakeLists.txt  hsv_seg2.cpp
pcl/src/pipe_segmentation/: .cproject  .project  CMakeLists.txt  pipe_segmentation.cpp
